--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "iraninan-banks-react-icons",
-  "version": "1.0.1",
+  "name": "@snapp-store/iraninan-banks-react-icons",
+  "version": "1.0.2",
   "description": "Iraninan banks React SVG icons library made by SnappStore!",
   "main": "./dist/cjs/index.js",
   "module": "./dist/esm/index.js",
@@ -26,8 +26,8 @@
   "sideEffects": false,
   "scripts": {
     "optimize": "rimraf ./optimized & svgo -q -p 8 -f ./raw -o ./optimized",
-    "build": "yarn optimize && node scripts/build.js",
-    "release": "yarn changeset publish"
+    "build": "npm run optimize && node scripts/build.js",
+    "release": "npx changeset publish"
   },
   "peerDependencies": {
     "react": "^16.13.1 || ^17.0.1",
