--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@snapp-store/iraninan-banks-react-icons",
-  "version": "2.0.0",
-  "description": "Iraninan banks React SVG icons library made by SnappStore!",
+  "name": "@snapp-store/iranian-banks-react-icons",
+  "version": "0.0.1",
+  "description": "iranian banks React SVG icons library made by SnappStore!",
   "main": "./dist/cjs/index.js",
   "module": "./dist/esm/index.js",
   "author": "Ali Montajebi",
@@ -9,7 +9,7 @@
   "keywords": [
     "react",
     "icon",
-    "iraninan",
+    "iranian",
     "persian",
     "bank"
   ],
@@ -17,11 +17,11 @@
     "dist"
   ],
   "bugs": {
-    "url": "https://github.com/snapp-store/iraninan-banks-react-icons/issues"
+    "url": "https://github.com/snapp-store/iranian-banks-react-icons/issues"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/snapp-store/iraninan-banks-react-icons.git"
+    "url": "git+https://github.com/snapp-store/iranian-banks-react-icons.git"
   },
   "sideEffects": false,
   "scripts": {
