--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "release": "npx changeset publish"
   },
   "peerDependencies": {
-    "react": "^16.13.1 || ^17.0.1",
-    "react-dom": "^16.13.1 || ^17.0.1"
+    "react": "^16.13.1 || ^17.0.1 || ^18.0.0",
+    "react-dom": "^16.13.1 || ^17.0.1 || ^18.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
